--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   line-height: 24px;
   margin: 0;
   color: #fff9ff;
+  background-color: rgba(66, 105, 176, 0.5);
 }
 
 header {
@@ -95,7 +96,14 @@ a {
   background-repeat: no-repeat;
   background-position-x: 20px;
   background-position-y: 20px;
-  
+}
+
+.countrylistItem:nth-child(4n + 2) {
+  background-color: rgba(66, 105, 176, 0.9);
+}
+
+.countrylistItem:nth-child(4n + 3) {
+  background-color: rgba(66, 105, 176, 0.9);
 }
 
 .active-link {
